--- a/index.html
+++ b/index.html
@@ -4,7 +4,18 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <title>Govind Patil</title>
   </head>
   <body>
+    <h1>Hello, Code School!</h1>
+    <ul>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>Javascript</li>
+        <li>Python</li>
+        <li>Php</li>
+        <li>Git</li>
+        <li>Ruby</li>
+    </ul>
   </body>
 </html>
